# Kubernetes-WSGI

./: .env  README.md  full.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
notebook/: 01-EDA.ipynb
notebook/notebooks/: intro_notebook.ipynb
